--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
+    "react-input-mask": "^2.0.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-text-mask": "^5.4.3",
     "rsuite": "^4.8.8",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
